# synchrotron-data-analysis-notes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  pages.yml  test.yml
01_program_overview/: README.md  aps_facility.md  beamlines.md  partner_facilities.md  research_domains.md
02_xray_modalities/: README.md
02_xray_modalities/crystallography/: README.md  ai_ml_methods.md  data_format.md
02_xray_modalities/ptychography/: README.md  ai_ml_methods.md  data_format.md
02_xray_modalities/scattering/: README.md  ai_ml_methods.md  data_format.md
02_xray_modalities/spectroscopy/: README.md  ai_ml_methods.md  data_format.md
02_xray_modalities/tomography/: README.md  ai_ml_methods.md  data_format.md  reconstruction.md
02_xray_modalities/xrf_microscopy/: README.md  ai_ml_methods.md  analysis_pipeline.md  data_format.md
03_ai_ml_methods/: README.md
03_ai_ml_methods/autonomous_experiment/: README.md  ai_nerd.md  bayesian_optimization.md  foundation_models_beamline.md  knowledge_injected_bo.md  roi_finder.md
03_ai_ml_methods/denoising/: README.md  deep_residual_xrf.md  noise2noise.md  noise2void.md  tomogan.md
03_ai_ml_methods/image_segmentation/: README.md  tomography_segmentation.md  unet_variants.md  xrf_cell_segmentation.md
03_ai_ml_methods/multimodal_integration/: README.md  ct_xas_correlation.md  optical_xray_registration.md  xrf_ptychography.md
03_ai_ml_methods/reconstruction/: README.md  diffusion_ct.md  inr_dynamic.md  pinns_xray.md  ptychonet.md  tomocupy.md
04_publications/: README.md  ber_program_publications.md  eberlight_publications.md  template_paper_review.md
04_publications/ai_ml_synchrotron/: README.md  review_ai_als_workshop_2024.md  review_ai_edge_ptychography_2023.md  review_ai_nerd_2024.md  review_aidriven_xanes_2025.md  review_aiedge_ptycho_2023.md  review_alphafold_2021.md  review_deep_residual_xrf_2023.md  review_diffusion_ct_2024.md  review_fullstack_dl_tomo_2023.md  review_fullstack_tomo_2023.md  review_hallucination_tomo_2021.md  review_httomo_2024.md  review_noise2void_2019.md  (+6 more)
05_tools_and_code/: README.md
06_data_structures/: README.md  data_challenges_apsu.md  data_formats_comparison.md  data_scale_analysis.md  hdf5_deep_dive.md
07_data_pipeline/: README.md  acquisition.md  analysis.md  architecture_diagram.md  processing.md  storage.md  streaming.md
08_references/: README.md  bibliography.bib  glossary.md  useful_links.md
09_noise_catalog/: README.md  summary_table.md  troubleshooter.md  troubleshooter.yaml
10_interactive_lab/: CITATIONS.bib  README.md  manifest.yaml
docs/: README.md
eberlight-explorer/: README.md  _deprecated.py  app.py
experiments/: README.md  _test_helpers.py
explorer/: app.py  requirements.txt
scripts/: build_static_site.py  migrate_legacy_mermaid.py  requirements.txt
(+253 files in other folders)
